--- a/WEB303As07/index.html
+++ b/WEB303As07/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1><!-- your name goes here --> Photo Gallery</h1>
+    <h1>Harshil Hingu Photo Gallery</h1>
     <div id="photo-viewer">
         <a href="#" class="photo-box is-loading"></a>
         <div class="photo-thumbnails">
